# computer_graphics_report

./: presentation.txt  webgpu_final.pptx  webgpu_notes_uk.docx
browse_triangle/: Makefile  index.html
web_gpu_rust/: Cargo.toml
web_gpu_rust/src/: main.rs  shader.wgsl
